tests/sksl/errors/InterfaceBlockWithNoMembers.glsl
### Compilation failed:

error: 1: interface block 'S' must contain at least one member
const S {};
      ^^^^
error: 2: interface block 'testBlock' must contain at least one member
testBlock {} x[2];
^^^^^^^^^^^^
2 errors
